# Talk_to_PDF

./: .gitignore  README.md  app.py  flow.mmd  pyproject.toml  run.py  structure.mmd
src/: main.py
src/core/: agent.py  rag.py
src/presentation/: callbacks.py  factory.py
