[project]
name = "chainlit-rag-poc"
version = "0.1.0"
description = "Simple PoC for Chainlit RAG application"
requires-python = ">=3.9"
dependencies = [
    "chainlit",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-ollama",
    "pypdf",
    "faiss-cpu",
    "sentence-transformers",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 79
quote-style = "single"